# Sales-Automation

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
scripts/: init_db.sh  init_db.sql
src/sales_automation/: __init__.py  cli.py  config.py  logging_config.py
src/sales_automation/api/: deps.py  main.py  schemas.py
src/sales_automation/db/: __init__.py  session.py
src/sales_automation/models/: __init__.py  base.py  company_research.py  email_approval.py  email_draft.py  email_reply.py  email_sent_message.py  email_verification_otp.py  lead.py  lead_score.py  password_reset_otp.py  refresh_token.py  user.py  workflow_log.py
src/sales_automation/repositories/: __init__.py  base.py  company_research_repository.py  email_repository.py  lead_repository.py  lead_score_repository.py  workflow_log_repository.py
src/sales_automation/services/: __init__.py  approval_app.py  auth.py  csv_importer.py  email_approval.py  email_generation.py  gmail_service.py  google_sheets_logging.py  lead_payload.py  lead_scoring.py  nvidia_ai_utils.py  openai_service.py  reply_classification.py  sales_workflow.py  slack_notification.py  website_research.py
tests/: test_api_contract.py  test_imports.py  test_integrations.py  test_lead_scoring.py  test_reply_classification.py  test_slack_notification.py  test_website_research.py
